# kbs

./: .gitignore  .replit  README.md  backend_test.py  design_guidelines.md  docker-compose.yml  plan.md  pyproject.toml  replit.md  start_backend.sh  start_frontend.sh
.devdata/: .devkey  .session.enc  settings.json  worker_id
.emergent/: emergent.yml  emergent_todos.json  summary.txt
attached_assets/: Pasted--Syroce-KBS-Agent-Tam-Refakt-r-G-revi-A-ama-A-D-Sen-htt_1777219618904.txt
backend/: .dockerignore  Dockerfile  __main__.py  agent_runtime.py  app_runtime.py  audit.py  auth.py  eventlog.py  idem.py  journal.py  kbs_client.py  kbs_simulator.py  log_setup.py  models.py  pms_client.py  requirements.txt  secure_storage.py  server.py  service.py  session.py  single_instance.py  sse_client.py  tray.py  validators.py  worker.py
backend/tests/: test_phase4_apis.py
frontend/: .env  Dockerfile  craco.config.js  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css  setupProxy.js
installer/: SyroceKBSAgent.spec  installer.iss
memory/: PRD.md
scripts/: post-merge.sh
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
test_reports/pytest/: phase4_results.xml
tests/: conftest.py  test_app_runtime.py  test_eventlog_noop.py  test_idem.py  test_journal_replay.py  test_log_pii_mask.py  test_multi_agent.py  test_other_workers.py  test_pms_client.py  test_poc.py  test_secure_storage.py  test_sse_client.py  test_sse_silent_vs_error.py  test_sse_worker.py  test_worker.py  test_worker_id_phase_d.py  test_worker_mode.py
(+30 files in other folders)
